John fixed word wrapping on home page. Added footer to other website pages.

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -91,6 +91,8 @@ font-weight: 600;
 margin-left: 5%;
 padding-top: 1rem; 
 font-size: 1rem; 
+overflow-wrap: break-word;
+word-break: break-all;
 }
 
 #line{
